--- a/config/database.yml
+++ b/config/database.yml
@@ -4,3 +4,10 @@ development:
   database: mtg_development
   pool: 5
   host: localhost
+
+test:
+  adapter: postgresql
+  encoding: utf-8
+  database: mtg_test
+  pool: 5
+  host: localhost
